public/css/new.css
html p {
font-size: 12px;
color: #981811;
line-height: 2px;


}

#bs-example-navbar-collapse-1 > ul > li {
color: blue;

}
body {
padding-top: 70px;
}

a {
    text-decoration: none;
}

#dLabel {color: blue;}

nav.navbar.navbar-default.navbar-fixed-bottom > div {
  background-color: #F5DEB3;
  margin: 0;
  padding: 18px;
  width: 100%;
  border-radius: 0;

}

nav.navbar.navbar-default.navbar-fixed-bottom {
  height: 80px;
}

.footerTxt {
  display: inline-block;
  margin-right: 15px;

}

div.container-fluid.topNavBar {
  background-color: #F5DEB3;
  z-index:900!important;
  opacity:1!important;
}

.logoSpace {
  height: 30vh;
  text-align: center;
}

.row {
  margin-bottom: 20px;
}

.logoSpace img {
  width: 125px;
  height: 125px;
  margin: 0 auto;
  text-align: center;
  margin-top: 55px;
}

section {
  padding: 0;
}

.center {
  margin: 0 auto;

}

.my-own-style {
    margin-left: 37px;
    margin-top: 37px;
}

.scroll {
    overflow: auto;
    height: 100%;
    padding: 0;
    margin-left: 37px;
}

